syntax = "proto3";

message FileLocation {
    string host = 1;
    string path = 2;
}

message MapJob {
    FileLocation file = 1;
}

message ReduceJob {
    string key = 1;
    repeated FileLocation files = 2;
}

message JobGetRequest {
    string host = 1;
}

message JobGetResponse {
    oneof job {
        MapJob map_job = 1;
        ReduceJob reduce_job = 2;
    }
}

message MapResult {
    map<string, FileLocation> key_results = 1;
}

message ReduceResult {
    string key = 1;
    FileLocation result = 2;
}

message JobDoneRequest {
    oneof result {
        MapResult map_result = 1;
        ReduceResult reduce_result = 2;
    }
}

message JobDoneResponse {}

service MasterGRPC {
    rpc JobGet(JobGetRequest) returns (JobGetResponse) {}
    rpc JobDone(JobDoneRequest) returns (JobDoneResponse) {}
}
